# pitch-perfector

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Interesting Links  LICENSE  QwtExample.pro  README.md  adcreader.cpp  adcreader.h  duplex_obj.cpp  main.cpp  package.json  window.cpp  window.h
.github/workflows/: ccpp.yml
Code/: MIT_duplex.cpp  Makefile  Readme.md  RtAudio_API.cpp  RtAudio_get_vals  RtAudio_test  RtAudio_test.cpp  audioprobe.cpp  duplex_rtaudio.cpp  duplex_rtaudio_testing.cpp  getapi  main.cpp  main.cpp.save.1  sfml-app
Code/GPIO/: CMakeLists.txt  Makefile  gpio-functions.cpp  readin.cpp
Code/QtGUI/: Makefile  QtGUI  QtGUI.pro
Code/RtAudio/: oopfft_pitchperfecor.cpp  vocoding.cpp
Code/RtAudio/duplex_fft/: Makefile  audio_out.txt  duplex_fft  duplex_rtaudio.cpp
Code/RtAudio/fft_object/: Makefile  audioStreamer.cpp  audioStreamer.h  fft.cpp  fft.h  main.cpp  oopfft_pitchperfecor.cpp  vocoder.cpp  vocoder.h  window.cpp  window.h
Code/RtAudio/oopvocoder/: Makefile  fft.cpp  test_vocoder.cpp  vocode  vocoder.cpp  vocoder.h  vocoding.cpp
Code/RtAudio/simple_duplex/: Makefile  audio_out.txt  duplex  duplex_rtaudio.cpp  mit_duplex
Code/RtAudio/unknown/: GetValuesRtAudo
Code/RtAudio/vocoder/: Makefile  vocode  vocoder.cpp  vocoder.h  vocoding.cpp
Code/classfiles/: CMakeLists.txt  Makefile  dispatch.cpp  dispatch.h  fft.cpp  fft.h  fulltest.cpp  tester  vocoder.cpp  vocoder.h
Code/classfiles/testSuite/: real_spect.txt  timesig.txt  vocoder.cpp
Code/fft_object/: CMakeLists.txt  Iir.h  Makefile  PitchPerfector  PitchPerfector.pro  QwtExample.pro  audioStreamer.cpp  audioStreamer.h  dispatch.cpp  dispatch.h  fft.cpp  fft.h  fftn.cpp  helper.cpp  helper.h  installDependencies.sh  vocoder.cpp  vocoder.h  vocodern.cpp  window.cpp  window.h
Code/fft_object copy/: fft.cpp
Code/fft_object_copy/: CMakeLists.txt  Makefile  audioStreamer.cpp  audioStreamer.h  dispatch.cpp  fft.cpp  fft.h  helper.cpp  installDependencies.sh  vocoder.cpp  vocoder.h  voxFilter.cpp  voxFilter.h  window.cpp  window.h
Code/macOS/fft_object/: Makefile  QwtExample  QwtExample.pro  audioStreamer.cpp  audioStreamer.h  fft.cpp  fft.h  main.cpp  window.cpp  window.h
Code/macOS/simple_duplex/: Makefile  duplex_rtaudio.cpp  macduplex
Code/macOS/vocoder/: vocode  vocoding.cpp
Code/old/QtGUI/: HelloWorldExample.cpp
Code/old/vocoder/: vocode
Code/oopvocoder/: fft.h  test  test_vocoder.cpp  vocoder.h
Code/oopvocoder/testSuite/: Makefile  fft.cpp  fft.h  inverseOut.txt  real_spect.txt  spectIn.txt  spectOut.txt  test  test_plotter.py  test_vocoder.cpp  tester  timesig.txt  vocoder.cpp  vocoder.h
Code/rtaudio_probes/probe_devices/: CMakeLists.txt  Makefile  audioprobe.cpp
Code/sfml_testing/: main.cpp.save
Code/vocoder/: vocoder.cpp  vocoding.cpp
Documentation/: DoxgenHomePage.md  Interesting Links  Pi setup
Documentation/Doxygen/: Doxyfile
Documentation/Images/Schematic/: Schematic.tex
Documentation/InitialPitch/: InitialPitch.odp  InitialPitch.pptx
GPIO/: readin.cpp
Hardware/: Readme.md
Hardware/AdafruitMic/: Readme.md
Hardware/Design/CodecSchematic/: CODECINTERFACE.DSN  CODECINTERFACE_0.DBK  CodecInterface.opj  Readme.md  codec_board.brd  (+1 more)
html/: Iir_8h_source.html  annotated.html  audioStreamer_8h_source.html  classDispatch-members.html  classDispatch.html  classVocoder-members.html  classVocoder.html  classVoxFilter-members.html  classVoxFilter.html  classWindow-members.html  classWindow.html  classaudioStreamer-members.html  classaudioStreamer.html  classdispatch-members.html  classdispatch.html  classes.html  classfft-members.html  classfft.html  classfiles_2dispatch_8h_source.html  classfiles_2fft_8h_source.html  classfiles_2testSuite_2fft_8h_source.html  classfiles_2testSuite_2vocoder_8h_source.html  classfiles_2vocoder_8h_source.html  classvocoder-members.html  classvocoder.html  copy_2audioStreamer_8h_source.html  copy_2helper_8h_source.html  copy_2voxFilter_8h_source.html  copy_2window_8h_source.html  dir_0888a3575a936a058a9a88ddeed60b3d.html  dir_09e2b25c0685c7a1d2bd8bddc07db64d.html  dir_1a424cce3c1b1e496c56d6c3518950de.html  dir_23fdee2f6995db16c755697cdf620cf4.html  dir_2b42d136d1224d105ac4596c646c20e1.html  dir_2c1b2366480e4232c66d21f61cd82910.html  dir_3779f6693f5cdefaa024ff84596494b8.html  dir_6057c4be698acedce1bfafb73bed02cd.html  dir_60830aa9f331da3df4f2d5519c049866.html  dir_72466ef7340dd73eef7aaa502cd697c2.html  dir_790a87ec16fdc6eabf32f9effb2466eb.html  (+42 more)
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  search.js
latex/: annotated.tex  classDispatch.tex  classVocoder.tex  classVoxFilter.tex  classWindow.eps  classWindow.tex  classaudioStreamer.eps  classaudioStreamer.tex  classdispatch.tex  classfft.tex  classvocoder.tex  dir_0888a3575a936a058a9a88ddeed60b3d.tex  dir_09e2b25c0685c7a1d2bd8bddc07db64d.tex  dir_1a424cce3c1b1e496c56d6c3518950de.tex  dir_23fdee2f6995db16c755697cdf620cf4.tex  dir_2b42d136d1224d105ac4596c646c20e1.tex  dir_2c1b2366480e4232c66d21f61cd82910.tex  dir_3779f6693f5cdefaa024ff84596494b8.tex  dir_6057c4be698acedce1bfafb73bed02cd.tex  dir_60830aa9f331da3df4f2d5519c049866.tex  dir_72466ef7340dd73eef7aaa502cd697c2.tex  dir_790a87ec16fdc6eabf32f9effb2466eb.tex  dir_87b1943475de92e56dd2a91fae552cd7.tex  dir_8b7fc86db2980ee5ba6e091614245dd3.tex  dir_9062a86ed5403c1d21ba6a2b88cd4e2a.tex  dir_9f2e04ed41f9817b0fb2afeeaf894f2f.tex  dir_aa629535e867356a6a1f7fbdf62b4e2e.tex  dir_afdf4a24c4e8f4030e2a15a485425d3d.tex  dir_b008c124568dda408df6fc4b2a5efc12.tex  dir_b56658f4d9e277bd44c9e2c7f9f71efd.tex  dir_b98c88ec500200e084113f778d40b627.tex  dir_bb7f4be702614ea439d24a39d1330566.tex  dir_c6d1c53d88eb818e7ba2c02837785fd2.tex  dir_eb30cf7ef28c23301c613ba9945069fd.tex  dir_f71ea9307558c2b3705dc17b51eb11ca.tex  dir_faa0584b3204d615ebac81a70c7db9a0.tex  dir_fb7a1603145483403eca7abbc9a6b3f2.tex  hierarchy.tex  index.tex  md__home_travis_build_a2198699s_pitch-perfector_Code_Readme.tex  (+1 more)
(+26 files in other folders)
